{
    "name": "InputActions",
    "maps": [
        {
            "name": "Menus",
            "id": "2c1f663a-4235-44ab-a280-070df092f685",
            "actions": [
                {
                    "name": "ToggleMenu",
                    "type": "Button",
                    "id": "9b57b40c-3b1b-48cc-aea7-79bca6f4fcee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnDisplay",
                    "type": "Button",
                    "id": "40491899-9646-4802-b77c-0a7695fc58ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Map",
                    "type": "Button",
                    "id": "3e304ad9-5a1e-4e74-b8fb-1ec0252375a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "377eff5e-8201-43eb-b7ac-38dd9ba338bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "cd310bee-d8a2-4321-941a-6112640ee759",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LoadGreek",
                    "type": "Button",
                    "id": "3f171be8-56dd-4c04-81f6-7ecde5c51e8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LoadChinese",
                    "type": "Button",
                    "id": "8db2c0eb-78e6-4b69-bb55-b780742b77a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LoadArms",
                    "type": "Button",
                    "id": "04762a8c-80cd-429b-a9fc-b3b69ff10d4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LoadSamurai",
                    "type": "Button",
                    "id": "167301d0-2c9a-4f88-93de-22aeb85a3e0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d466e7f6-49b7-412a-9b09-cdfd0a140379",
                    "path": "<OculusTouchController>{LeftHand}/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccc7c550-ae0e-404b-bfe0-cdd1b53ced33",
                    "path": "<OculusTouchController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a04b8e7-756f-4fde-a27f-d364cce57f3c",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Map",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f78d3fdc-076e-40f5-b114-23e63e3a4195",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDisplay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e661795-6a9a-4305-9ee5-dcce57e39140",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5aa08d2-e4dd-4b7f-bc1f-87fe6d22888b",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LoadGreek",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67b7f049-3cd1-46b7-b2f3-2df5dec3d01a",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LoadChinese",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e85cf9a-2a50-4b2b-9d06-e88a1e17ee6b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LoadArms",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74140c79-c334-4136-a348-df6f2de90855",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LoadSamurai",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}